test/functions/fcf/ParamReturnType.chpl
const p = proc() param { return 0; };
writeln(p());
